Added AI Resume Builder backend and frontend

--- a/AI_Resume_Builder/Frontend-Namira(C231450)/ai-resume-builder/src/App.css
+++ b/AI_Resume_Builder/Frontend-Namira(C231450)/ai-resume-builder/src/App.css
@@ -1,6 +1,19 @@
 #root {
 }
 
+/* Background Image Style */
+/* .homepage-bg {
+  background-image: url('/bg.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 100vh;
+  width: 100%;
+} */
+
+
+
+
 .logo {
   height: 6em;
   padding: 1.5em;
